# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.475 2005/12/20 16:32:05 wolf31o2 Exp $

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc10.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py:
  Updated sh support from Mike Frysinger <vapier@gentoo.org> and closing bug
  #115866.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Changed from -z to -n for bug #116180.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Detect missing binaries for the hashing functions and abort if not found

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> README,
  files/catalyst.conf:
  Updated README to list new requirements. Set default hash as crc32. Set
  default digests as sha1/md5.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.conf,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/livecd_stage2_target.py, modules/stage2_target.py:
  Change the internal hash checking to be quicker and more memory efficient.
  Add additional hash digests options.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-controller.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Fixed up spacing/coding style on tinderbox.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kill-chroot-pids.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, targets/support/post-kmerge.sh,
  targets/support/pre-kmerge.sh, targets/support/rc-update.sh,
  targets/support/target_image_setup.sh, targets/support/unmerge.sh:
  Fixed up spacing/coding style on support.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst: